<resources>
    <!-- Application -->
    <string name="app_name">UniPath</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_item_header">Communicate</string>
    <string name="navigation_drawer_item1">Map</string>
    <string name="navigation_drawer_item2">Navigate</string>
    <string name="navigation_drawer_item3">Settings</string>
    <string name="navigation_drawer_item4">Report Problem</string>
    <string name="navigation_drawer_item5">Exit</string>
    <string name="navigation_drawer_header_switch">GPS</string>
    <string name="navigation_drawer_header_switch_on">GPS: On</string>
    <string name="navigation_drawer_header_switch_off">GPS: Off</string>

    <!-- Settings Menu Text -->
    <string name="action_settings">Settings</string>

    <!-- Content Description Text -->
    <string name="imageview_content_description">ImageView</string>
    <string name="imagebutton_content_description">ImageButton</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings_uppercase">SETTINGS</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_license">Licenses</string>
    <string name="pref_description_license">Used resources with due to their licenses</string>

    <string name="pref_title_gps_autostart">Auto Skip Map and Open Navigation at Startup</string>
    <string name="pref_description_gps_autostart">If you check this, navigation will be automatically started at startup if user is in Atılım University campus</string>

    <string name="pref_title_read_embedded">Read Embedded Router Values</string>
    <string name="pref_description_read_embedded">If you check this, the application will use embedded (previously calculated) locations based on routers.</string>

    <string name="pref_title_about">About</string>
    <string name="pref_description_about">Version and build number of application</string>

    <string name="pref_title_calibrate">Calibrate</string>
    <string name="pref_description_calibrate">Save reference points to calculate location indoor</string>

    <string name="title_activity_maps">Map</string>
    <string name="user_is_not_in_university_text">YOU ARE NOT IN \nATILIM UNIVERSITY CAMPUS</string>
    <string name="user_is_not_in_department_text">YOU ARE NOT IN ANY\n ATILIM UNIVERSITY DEPARTMENT</string>

    <string name="about_dialog_text">Version Number: 01\n Build Number: 20171104\n Atılım University © 2017</string>
    <string name="copyright_dialog_text">All Atılım University photos are in copyright\n</string>

    <string name="calibrate_header_text">START CALIBRATING\nREFERENCE POINTS</string>
    <string name="calibrate_button_text">CALIBRATE</string>
    <string name="clear_button_text">CLEAR</string>
    <string name="gps_not_active_alert">GPS IS NOT ACTIVE</string>
    <string name="wifi_not_active_alert">WIFI IS NOT ENABLED</string>
    <string name="gps_wifi_not_active_alert">PLEASE TURN ON GPS AND WIFI</string>
    <string name="location_notfound_text">CANNOT FIND LOCATION IN DEPARTMENT</string>

    <string-array name="route_options_array">
        <item>
            Shortest
        </item>
        <item>
            Fastest
        </item>
    </string-array>

    <string-array name="floor_numbers_array">
        <item>
            Floor -2
        </item>
        <item>
            Floor -1
        </item>
        <item>
            Floor 0
        </item>
        <item>
            Floor 1
        </item>
        <item>
            Floor 2
        </item>
        <item>
            Floor 3
        </item>
        <item>
            Floor 4
        </item>
    </string-array>
</resources>
