<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_drawer_item1" />

        <item
            android:id="@+id/nav_navigate"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_drawer_item2" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_item3" />
    </group>

    <item android:title="@string/navigation_drawer_item_header">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navigation_drawer_item4" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/navigation_drawer_item5" />
    </group>
</menu>
