<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.atilim.uni.unipath.NavigationActivity"
    tools:showIn="@layout/app_bar_navigation">

    <com.atilim.uni.unipath.extralib.TouchImageView
        android:id="@+id/floorPlanImageNavigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewPanorama"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ImageButton
        android:id="@+id/drawerButtonNavigation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/refreshButtonNavigation"
        android:layout_marginTop="30dp"
        android:background="@drawable/drawer"
        android:contentDescription="@string/imagebutton_content_description" />

    <ImageButton
        android:id="@+id/refreshButtonNavigation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:drawable/stat_notify_sync"
        android:contentDescription="@string/imagebutton_content_description"
        android:layout_below="@+id/drawerButtonNavigation"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/notInCampusAlertTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:background="@drawable/text_back"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/user_is_not_in_university_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.atilim.uni.unipath.customs.CustomSpinner
        android:id="@+id/floorPlanSelectorSpinnerNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/drawerButtonNavigation"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        android:id="@+id/circularLoadingProgressBarNavigation"
        style="?android:attr/progressBarStyle"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/circular_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp" />

    <ImageView
        android:id="@+id/roundCornersImageViewNavigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/layout_rounded_corner"
        android:scaleType="fitXY"
        android:contentDescription="@string/imageview_content_description"/>

</RelativeLayout>
